fix an overflow issue

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -29,6 +29,10 @@
     max-height: 100%;
 }
 
+.item {
+	overflow: hidden;
+}
+
 /* RESPONSIVE CSS
 -------------------------------------------------- */
 
